Projeto::Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER SEMICOLON function_decls block DOT
Rule 2     block -> var_decls BEGIN stmt_list END
Rule 3     var_decls -> VAR var_decl_list
Rule 4     var_decls -> empty
Rule 5     var_decl_list -> var_decl_list var_decl
Rule 6     var_decl_list -> var_decl
Rule 7     var_decl -> id_list COLON type SEMICOLON
Rule 8     id_list -> id_list COMMA IDENTIFIER
Rule 9     id_list -> IDENTIFIER
Rule 10    type -> INTEGER
Rule 11    type -> BOOLEAN
Rule 12    type -> STRING_TYPE
Rule 13    type -> array_type
Rule 14    array_type -> ARRAY LBRACKET NUMBER RANGE NUMBER RBRACKET OF simple_type
Rule 15    simple_type -> INTEGER
Rule 16    simple_type -> BOOLEAN
Rule 17    simple_type -> STRING_TYPE
Rule 18    function_decls -> function_decls function_decl
Rule 19    function_decls -> empty
Rule 20    function_decl -> FUNCTION IDENTIFIER LPAREN param_list RPAREN SEMICOLON block SEMICOLON
Rule 21    function_decl -> FUNCTION IDENTIFIER LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON
Rule 22    param_list -> param_list SEMICOLON param
Rule 23    param_list -> param
Rule 24    param_list -> empty
Rule 25    param -> id_list COLON type
Rule 26    stmt_list -> stmt_list SEMICOLON stmt
Rule 27    stmt_list -> stmt_list SEMICOLON
Rule 28    stmt_list -> stmt
Rule 29    stmt_list -> empty
Rule 30    stmt -> assign_stmt
Rule 31    stmt -> if_stmt
Rule 32    stmt -> while_stmt
Rule 33    stmt -> for_stmt
Rule 34    stmt -> writeln_stmt
Rule 35    stmt -> readln_stmt
Rule 36    stmt -> write_stmt
Rule 37    stmt -> block_stmt
Rule 38    stmt -> func_call
Rule 39    assign_stmt -> var_ref ASSIGN logic_expr
Rule 40    var_ref -> IDENTIFIER
Rule 41    var_ref -> IDENTIFIER LBRACKET logic_expr RBRACKET
Rule 42    if_stmt -> IF logic_expr THEN stmt
Rule 43    if_stmt -> IF logic_expr THEN stmt ELSE stmt
Rule 44    while_stmt -> WHILE logic_expr DO stmt
Rule 45    for_stmt -> FOR IDENTIFIER ASSIGN logic_expr TO logic_expr DO stmt
Rule 46    for_stmt -> FOR IDENTIFIER ASSIGN logic_expr DOWNTO logic_expr DO stmt
Rule 47    write_stmt -> WRITE LPAREN expr_list RPAREN
Rule 48    writeln_stmt -> WRITELN LPAREN expr_list RPAREN
Rule 49    writeln_stmt -> WRITELN
Rule 50    readln_stmt -> READLN LPAREN var_ref RPAREN
Rule 51    block_stmt -> BEGIN stmt_list END
Rule 52    func_call -> IDENTIFIER LPAREN expr_list RPAREN
Rule 53    expr_list -> expr_list COMMA logic_expr
Rule 54    expr_list -> logic_expr
Rule 55    expr_list -> empty
Rule 56    logic_expr -> logic_expr AND rel_expr
Rule 57    logic_expr -> logic_expr OR rel_expr
Rule 58    logic_expr -> NOT rel_expr
Rule 59    logic_expr -> rel_expr
Rule 60    rel_expr -> rel_expr EQ expr
Rule 61    rel_expr -> rel_expr NE expr
Rule 62    rel_expr -> rel_expr LT expr
Rule 63    rel_expr -> rel_expr GT expr
Rule 64    rel_expr -> rel_expr LE expr
Rule 65    rel_expr -> rel_expr GE expr
Rule 66    rel_expr -> expr
Rule 67    expr -> expr PLUS term
Rule 68    expr -> expr MINUS term
Rule 69    expr -> term
Rule 70    term -> term TIMES factor
Rule 71    term -> term DIVIDE factor
Rule 72    term -> term MOD factor
Rule 73    term -> factor
Rule 74    factor -> LENGTH LPAREN expr RPAREN
Rule 75    factor -> primary
Rule 76    primary -> NUMBER
Rule 77    primary -> STRING
Rule 78    primary -> BOOLEAN_LITERAL
Rule 79    primary -> var_ref
Rule 80    primary -> func_call
Rule 81    primary -> LPAREN logic_expr RPAREN
Rule 82    empty -> <empty>

Terminals, with rules where they appear

AND                  : 56
ARRAY                : 14
ASSIGN               : 39 45 46
BEGIN                : 2 51
BOOLEAN              : 11 16
BOOLEAN_LITERAL      : 78
COLON                : 7 21 25
COMMA                : 8 53
DIVIDE               : 71
DO                   : 44 45 46
DOT                  : 1
DOWNTO               : 46
ELSE                 : 43
END                  : 2 51
EQ                   : 60
FOR                  : 45 46
FUNCTION             : 20 21
GE                   : 65
GT                   : 63
IDENTIFIER           : 1 8 9 20 21 40 41 45 46 52
IF                   : 42 43
INTEGER              : 10 15
LBRACKET             : 14 41
LE                   : 64
LENGTH               : 74
LPAREN               : 20 21 47 48 50 52 74 81
LT                   : 62
MINUS                : 68
MOD                  : 72
NE                   : 61
NOT                  : 58
NUMBER               : 14 14 76
OF                   : 14
OR                   : 57
PLUS                 : 67
PROGRAM              : 1
RANGE                : 14
RBRACKET             : 14 41
READLN               : 50
RPAREN               : 20 21 47 48 50 52 74 81
SEMICOLON            : 1 7 20 20 21 21 22 26 27
STRING               : 77
STRING_TYPE          : 12 17
THEN                 : 42 43
TIMES                : 70
TO                   : 45
VAR                  : 3
WHILE                : 44
WRITE                : 47
WRITELN              : 48 49
error                : 

Nonterminals, with rules where they appear

array_type           : 13
assign_stmt          : 30
block                : 1 20 21
block_stmt           : 37
empty                : 4 19 24 29 55
expr                 : 60 61 62 63 64 65 66 67 68 74
expr_list            : 47 48 52 53
factor               : 70 71 72 73
for_stmt             : 33
func_call            : 38 80
function_decl        : 18
function_decls       : 1 18
id_list              : 7 8 25
if_stmt              : 31
logic_expr           : 39 41 42 43 44 45 45 46 46 53 54 56 57 81
param                : 22 23
param_list           : 20 21 22
primary              : 75
program              : 0
readln_stmt          : 35
rel_expr             : 56 57 58 59 60 61 62 63 64 65
simple_type          : 14
stmt                 : 26 28 42 43 43 44 45 46
stmt_list            : 2 26 27 51
term                 : 67 68 69 70 71 72
type                 : 7 21 25
var_decl             : 5 6
var_decl_list        : 3 5
var_decls            : 2
var_ref              : 39 50 79
while_stmt           : 32
write_stmt           : 36
writeln_stmt         : 34

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER SEMICOLON function_decls block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER SEMICOLON function_decls block DOT

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . SEMICOLON function_decls block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER SEMICOLON . function_decls block DOT
    (18) function_decls -> . function_decls function_decl
    (19) function_decls -> . empty
    (82) empty -> .

    FUNCTION        reduce using rule 82 (empty -> .)
    VAR             reduce using rule 82 (empty -> .)
    BEGIN           reduce using rule 82 (empty -> .)

    function_decls                 shift and go to state 5
    empty                          shift and go to state 6

state 5

    (1) program -> PROGRAM IDENTIFIER SEMICOLON function_decls . block DOT
    (18) function_decls -> function_decls . function_decl
    (2) block -> . var_decls BEGIN stmt_list END
    (20) function_decl -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN SEMICOLON block SEMICOLON
    (21) function_decl -> . FUNCTION IDENTIFIER LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON
    (3) var_decls -> . VAR var_decl_list
    (4) var_decls -> . empty
    (82) empty -> .

    FUNCTION        shift and go to state 10
    VAR             shift and go to state 11
    BEGIN           reduce using rule 82 (empty -> .)

    block                          shift and go to state 7
    function_decl                  shift and go to state 8
    var_decls                      shift and go to state 9
    empty                          shift and go to state 12

state 6

    (19) function_decls -> empty .

    FUNCTION        reduce using rule 19 (function_decls -> empty .)
    VAR             reduce using rule 19 (function_decls -> empty .)
    BEGIN           reduce using rule 19 (function_decls -> empty .)


state 7

    (1) program -> PROGRAM IDENTIFIER SEMICOLON function_decls block . DOT

    DOT             shift and go to state 13


state 8

    (18) function_decls -> function_decls function_decl .

    FUNCTION        reduce using rule 18 (function_decls -> function_decls function_decl .)
    VAR             reduce using rule 18 (function_decls -> function_decls function_decl .)
    BEGIN           reduce using rule 18 (function_decls -> function_decls function_decl .)


state 9

    (2) block -> var_decls . BEGIN stmt_list END

    BEGIN           shift and go to state 14


state 10

    (20) function_decl -> FUNCTION . IDENTIFIER LPAREN param_list RPAREN SEMICOLON block SEMICOLON
    (21) function_decl -> FUNCTION . IDENTIFIER LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON

    IDENTIFIER      shift and go to state 15


state 11

    (3) var_decls -> VAR . var_decl_list
    (5) var_decl_list -> . var_decl_list var_decl
    (6) var_decl_list -> . var_decl
    (7) var_decl -> . id_list COLON type SEMICOLON
    (8) id_list -> . id_list COMMA IDENTIFIER
    (9) id_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 19

    var_decl_list                  shift and go to state 16
    var_decl                       shift and go to state 17
    id_list                        shift and go to state 18

state 12

    (4) var_decls -> empty .

    BEGIN           reduce using rule 4 (var_decls -> empty .)


state 13

    (1) program -> PROGRAM IDENTIFIER SEMICOLON function_decls block DOT .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER SEMICOLON function_decls block DOT .)


state 14

    (2) block -> var_decls BEGIN . stmt_list END
    (26) stmt_list -> . stmt_list SEMICOLON stmt
    (27) stmt_list -> . stmt_list SEMICOLON
    (28) stmt_list -> . stmt
    (29) stmt_list -> . empty
    (30) stmt -> . assign_stmt
    (31) stmt -> . if_stmt
    (32) stmt -> . while_stmt
    (33) stmt -> . for_stmt
    (34) stmt -> . writeln_stmt
    (35) stmt -> . readln_stmt
    (36) stmt -> . write_stmt
    (37) stmt -> . block_stmt
    (38) stmt -> . func_call
    (82) empty -> .
    (39) assign_stmt -> . var_ref ASSIGN logic_expr
    (42) if_stmt -> . IF logic_expr THEN stmt
    (43) if_stmt -> . IF logic_expr THEN stmt ELSE stmt
    (44) while_stmt -> . WHILE logic_expr DO stmt
    (45) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr TO logic_expr DO stmt
    (46) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr DOWNTO logic_expr DO stmt
    (48) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (49) writeln_stmt -> . WRITELN
    (50) readln_stmt -> . READLN LPAREN var_ref RPAREN
    (47) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (51) block_stmt -> . BEGIN stmt_list END
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET

    END             reduce using rule 82 (empty -> .)
    SEMICOLON       reduce using rule 82 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    WRITELN         shift and go to state 38
    READLN          shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 20
    IDENTIFIER      shift and go to state 37

    stmt_list                      shift and go to state 21
    stmt                           shift and go to state 22
    empty                          shift and go to state 23
    assign_stmt                    shift and go to state 24
    if_stmt                        shift and go to state 25
    while_stmt                     shift and go to state 26
    for_stmt                       shift and go to state 27
    writeln_stmt                   shift and go to state 28
    readln_stmt                    shift and go to state 29
    write_stmt                     shift and go to state 30
    block_stmt                     shift and go to state 31
    func_call                      shift and go to state 32
    var_ref                        shift and go to state 33

state 15

    (20) function_decl -> FUNCTION IDENTIFIER . LPAREN param_list RPAREN SEMICOLON block SEMICOLON
    (21) function_decl -> FUNCTION IDENTIFIER . LPAREN param_list RPAREN COLON type SEMICOLON block SEMICOLON

    LPAREN          shift and go to state 41


state 16

    (3) var_decls -> VAR var_decl_list .
    (5) var_decl_list -> var_decl_list . var_decl
    (7) var_decl -> . id_list COLON type SEMICOLON
    (8) id_list -> . id_list COMMA IDENTIFIER
    (9) id_list -> . IDENTIFIER

    BEGIN           reduce using rule 3 (var_decls -> VAR var_decl_list .)
    IDENTIFIER      shift and go to state 19

    var_decl                       shift and go to state 42
    id_list                        shift and go to state 18

state 17

    (6) var_decl_list -> var_decl .

    IDENTIFIER      reduce using rule 6 (var_decl_list -> var_decl .)
    BEGIN           reduce using rule 6 (var_decl_list -> var_decl .)


state 18

    (7) var_decl -> id_list . COLON type SEMICOLON
    (8) id_list -> id_list . COMMA IDENTIFIER

    COLON           shift and go to state 43
    COMMA           shift and go to state 44


state 19

    (9) id_list -> IDENTIFIER .

    COLON           reduce using rule 9 (id_list -> IDENTIFIER .)
    COMMA           reduce using rule 9 (id_list -> IDENTIFIER .)


state 20

    (51) block_stmt -> BEGIN . stmt_list END
    (26) stmt_list -> . stmt_list SEMICOLON stmt
    (27) stmt_list -> . stmt_list SEMICOLON
    (28) stmt_list -> . stmt
    (29) stmt_list -> . empty
    (30) stmt -> . assign_stmt
    (31) stmt -> . if_stmt
    (32) stmt -> . while_stmt
    (33) stmt -> . for_stmt
    (34) stmt -> . writeln_stmt
    (35) stmt -> . readln_stmt
    (36) stmt -> . write_stmt
    (37) stmt -> . block_stmt
    (38) stmt -> . func_call
    (82) empty -> .
    (39) assign_stmt -> . var_ref ASSIGN logic_expr
    (42) if_stmt -> . IF logic_expr THEN stmt
    (43) if_stmt -> . IF logic_expr THEN stmt ELSE stmt
    (44) while_stmt -> . WHILE logic_expr DO stmt
    (45) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr TO logic_expr DO stmt
    (46) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr DOWNTO logic_expr DO stmt
    (48) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (49) writeln_stmt -> . WRITELN
    (50) readln_stmt -> . READLN LPAREN var_ref RPAREN
    (47) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (51) block_stmt -> . BEGIN stmt_list END
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET

    END             reduce using rule 82 (empty -> .)
    SEMICOLON       reduce using rule 82 (empty -> .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    WRITELN         shift and go to state 38
    READLN          shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 20
    IDENTIFIER      shift and go to state 37

    stmt_list                      shift and go to state 45
    stmt                           shift and go to state 22
    empty                          shift and go to state 23
    assign_stmt                    shift and go to state 24
    if_stmt                        shift and go to state 25
    while_stmt                     shift and go to state 26
    for_stmt                       shift and go to state 27
    writeln_stmt                   shift and go to state 28
    readln_stmt                    shift and go to state 29
    write_stmt                     shift and go to state 30
    block_stmt                     shift and go to state 31
    func_call                      shift and go to state 32
    var_ref                        shift and go to state 33

state 21

    (2) block -> var_decls BEGIN stmt_list . END
    (26) stmt_list -> stmt_list . SEMICOLON stmt
    (27) stmt_list -> stmt_list . SEMICOLON

    END             shift and go to state 46
    SEMICOLON       shift and go to state 47


state 22

    (28) stmt_list -> stmt .

    END             reduce using rule 28 (stmt_list -> stmt .)
    SEMICOLON       reduce using rule 28 (stmt_list -> stmt .)


state 23

    (29) stmt_list -> empty .

    END             reduce using rule 29 (stmt_list -> empty .)
    SEMICOLON       reduce using rule 29 (stmt_list -> empty .)


state 24

    (30) stmt -> assign_stmt .

    END             reduce using rule 30 (stmt -> assign_stmt .)
    SEMICOLON       reduce using rule 30 (stmt -> assign_stmt .)
    ELSE            reduce using rule 30 (stmt -> assign_stmt .)


state 25

    (31) stmt -> if_stmt .

    END             reduce using rule 31 (stmt -> if_stmt .)
    SEMICOLON       reduce using rule 31 (stmt -> if_stmt .)
    ELSE            reduce using rule 31 (stmt -> if_stmt .)


state 26

    (32) stmt -> while_stmt .

    END             reduce using rule 32 (stmt -> while_stmt .)
    SEMICOLON       reduce using rule 32 (stmt -> while_stmt .)
    ELSE            reduce using rule 32 (stmt -> while_stmt .)


state 27

    (33) stmt -> for_stmt .

    END             reduce using rule 33 (stmt -> for_stmt .)
    SEMICOLON       reduce using rule 33 (stmt -> for_stmt .)
    ELSE            reduce using rule 33 (stmt -> for_stmt .)


state 28

    (34) stmt -> writeln_stmt .

    END             reduce using rule 34 (stmt -> writeln_stmt .)
    SEMICOLON       reduce using rule 34 (stmt -> writeln_stmt .)
    ELSE            reduce using rule 34 (stmt -> writeln_stmt .)


state 29

    (35) stmt -> readln_stmt .

    END             reduce using rule 35 (stmt -> readln_stmt .)
    SEMICOLON       reduce using rule 35 (stmt -> readln_stmt .)
    ELSE            reduce using rule 35 (stmt -> readln_stmt .)


state 30

    (36) stmt -> write_stmt .

    END             reduce using rule 36 (stmt -> write_stmt .)
    SEMICOLON       reduce using rule 36 (stmt -> write_stmt .)
    ELSE            reduce using rule 36 (stmt -> write_stmt .)


state 31

    (37) stmt -> block_stmt .

    END             reduce using rule 37 (stmt -> block_stmt .)
    SEMICOLON       reduce using rule 37 (stmt -> block_stmt .)
    ELSE            reduce using rule 37 (stmt -> block_stmt .)


state 32

    (38) stmt -> func_call .

    END             reduce using rule 38 (stmt -> func_call .)
    SEMICOLON       reduce using rule 38 (stmt -> func_call .)
    ELSE            reduce using rule 38 (stmt -> func_call .)


state 33

    (39) assign_stmt -> var_ref . ASSIGN logic_expr

    ASSIGN          shift and go to state 48


state 34

    (42) if_stmt -> IF . logic_expr THEN stmt
    (43) if_stmt -> IF . logic_expr THEN stmt ELSE stmt
    (56) logic_expr -> . logic_expr AND rel_expr
    (57) logic_expr -> . logic_expr OR rel_expr
    (58) logic_expr -> . NOT rel_expr
    (59) logic_expr -> . rel_expr
    (60) rel_expr -> . rel_expr EQ expr
    (61) rel_expr -> . rel_expr NE expr
    (62) rel_expr -> . rel_expr LT expr
    (63) rel_expr -> . rel_expr GT expr
    (64) rel_expr -> . rel_expr LE expr
    (65) rel_expr -> . rel_expr GE expr
    (66) rel_expr -> . expr
    (67) expr -> . expr PLUS term
    (68) expr -> . expr MINUS term
    (69) expr -> . term
    (70) term -> . term TIMES factor
    (71) term -> . term DIVIDE factor
    (72) term -> . term MOD factor
    (73) term -> . factor
    (74) factor -> . LENGTH LPAREN expr RPAREN
    (75) factor -> . primary
    (76) primary -> . NUMBER
    (77) primary -> . STRING
    (78) primary -> . BOOLEAN_LITERAL
    (79) primary -> . var_ref
    (80) primary -> . func_call
    (81) primary -> . LPAREN logic_expr RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 51
    LENGTH          shift and go to state 55
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    BOOLEAN_LITERAL shift and go to state 60
    LPAREN          shift and go to state 56
    IDENTIFIER      shift and go to state 63

    logic_expr                     shift and go to state 49
    rel_expr                       shift and go to state 50
    expr                           shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    primary                        shift and go to state 57
    var_ref                        shift and go to state 61
    func_call                      shift and go to state 62

state 35

    (44) while_stmt -> WHILE . logic_expr DO stmt
    (56) logic_expr -> . logic_expr AND rel_expr
    (57) logic_expr -> . logic_expr OR rel_expr
    (58) logic_expr -> . NOT rel_expr
    (59) logic_expr -> . rel_expr
    (60) rel_expr -> . rel_expr EQ expr
    (61) rel_expr -> . rel_expr NE expr
    (62) rel_expr -> . rel_expr LT expr
    (63) rel_expr -> . rel_expr GT expr
    (64) rel_expr -> . rel_expr LE expr
    (65) rel_expr -> . rel_expr GE expr
    (66) rel_expr -> . expr
    (67) expr -> . expr PLUS term
    (68) expr -> . expr MINUS term
    (69) expr -> . term
    (70) term -> . term TIMES factor
    (71) term -> . term DIVIDE factor
    (72) term -> . term MOD factor
    (73) term -> . factor
    (74) factor -> . LENGTH LPAREN expr RPAREN
    (75) factor -> . primary
    (76) primary -> . NUMBER
    (77) primary -> . STRING
    (78) primary -> . BOOLEAN_LITERAL
    (79) primary -> . var_ref
    (80) primary -> . func_call
    (81) primary -> . LPAREN logic_expr RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 51
    LENGTH          shift and go to state 55
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    BOOLEAN_LITERAL shift and go to state 60
    LPAREN          shift and go to state 56
    IDENTIFIER      shift and go to state 63

    logic_expr                     shift and go to state 64
    rel_expr                       shift and go to state 50
    expr                           shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    primary                        shift and go to state 57
    var_ref                        shift and go to state 61
    func_call                      shift and go to state 62

state 36

    (45) for_stmt -> FOR . IDENTIFIER ASSIGN logic_expr TO logic_expr DO stmt
    (46) for_stmt -> FOR . IDENTIFIER ASSIGN logic_expr DOWNTO logic_expr DO stmt

    IDENTIFIER      shift and go to state 65


state 37

    (52) func_call -> IDENTIFIER . LPAREN expr_list RPAREN
    (40) var_ref -> IDENTIFIER .
    (41) var_ref -> IDENTIFIER . LBRACKET logic_expr RBRACKET

    LPAREN          shift and go to state 66
    ASSIGN          reduce using rule 40 (var_ref -> IDENTIFIER .)
    LBRACKET        shift and go to state 67


state 38

    (48) writeln_stmt -> WRITELN . LPAREN expr_list RPAREN
    (49) writeln_stmt -> WRITELN .

    LPAREN          shift and go to state 68
    END             reduce using rule 49 (writeln_stmt -> WRITELN .)
    SEMICOLON       reduce using rule 49 (writeln_stmt -> WRITELN .)
    ELSE            reduce using rule 49 (writeln_stmt -> WRITELN .)


state 39

    (50) readln_stmt -> READLN . LPAREN var_ref RPAREN

    LPAREN          shift and go to state 69


state 40

    (47) write_stmt -> WRITE . LPAREN expr_list RPAREN

    LPAREN          shift and go to state 70


state 41

    (20) function_decl -> FUNCTION IDENTIFIER LPAREN . param_list RPAREN SEMICOLON block SEMICOLON
    (21) function_decl -> FUNCTION IDENTIFIER LPAREN . param_list RPAREN COLON type SEMICOLON block SEMICOLON
    (22) param_list -> . param_list SEMICOLON param
    (23) param_list -> . param
    (24) param_list -> . empty
    (25) param -> . id_list COLON type
    (82) empty -> .
    (8) id_list -> . id_list COMMA IDENTIFIER
    (9) id_list -> . IDENTIFIER

    RPAREN          reduce using rule 82 (empty -> .)
    SEMICOLON       reduce using rule 82 (empty -> .)
    IDENTIFIER      shift and go to state 19

    param_list                     shift and go to state 71
    param                          shift and go to state 72
    empty                          shift and go to state 73
    id_list                        shift and go to state 74

state 42

    (5) var_decl_list -> var_decl_list var_decl .

    IDENTIFIER      reduce using rule 5 (var_decl_list -> var_decl_list var_decl .)
    BEGIN           reduce using rule 5 (var_decl_list -> var_decl_list var_decl .)


state 43

    (7) var_decl -> id_list COLON . type SEMICOLON
    (10) type -> . INTEGER
    (11) type -> . BOOLEAN
    (12) type -> . STRING_TYPE
    (13) type -> . array_type
    (14) array_type -> . ARRAY LBRACKET NUMBER RANGE NUMBER RBRACKET OF simple_type

    INTEGER         shift and go to state 76
    BOOLEAN         shift and go to state 77
    STRING_TYPE     shift and go to state 78
    ARRAY           shift and go to state 80

    type                           shift and go to state 75
    array_type                     shift and go to state 79

state 44

    (8) id_list -> id_list COMMA . IDENTIFIER

    IDENTIFIER      shift and go to state 81


state 45

    (51) block_stmt -> BEGIN stmt_list . END
    (26) stmt_list -> stmt_list . SEMICOLON stmt
    (27) stmt_list -> stmt_list . SEMICOLON

    END             shift and go to state 82
    SEMICOLON       shift and go to state 47


state 46

    (2) block -> var_decls BEGIN stmt_list END .

    DOT             reduce using rule 2 (block -> var_decls BEGIN stmt_list END .)
    SEMICOLON       reduce using rule 2 (block -> var_decls BEGIN stmt_list END .)


state 47

    (26) stmt_list -> stmt_list SEMICOLON . stmt
    (27) stmt_list -> stmt_list SEMICOLON .
    (30) stmt -> . assign_stmt
    (31) stmt -> . if_stmt
    (32) stmt -> . while_stmt
    (33) stmt -> . for_stmt
    (34) stmt -> . writeln_stmt
    (35) stmt -> . readln_stmt
    (36) stmt -> . write_stmt
    (37) stmt -> . block_stmt
    (38) stmt -> . func_call
    (39) assign_stmt -> . var_ref ASSIGN logic_expr
    (42) if_stmt -> . IF logic_expr THEN stmt
    (43) if_stmt -> . IF logic_expr THEN stmt ELSE stmt
    (44) while_stmt -> . WHILE logic_expr DO stmt
    (45) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr TO logic_expr DO stmt
    (46) for_stmt -> . FOR IDENTIFIER ASSIGN logic_expr DOWNTO logic_expr DO stmt
    (48) writeln_stmt -> . WRITELN LPAREN expr_list RPAREN
    (49) writeln_stmt -> . WRITELN
    (50) readln_stmt -> . READLN LPAREN var_ref RPAREN
    (47) write_stmt -> . WRITE LPAREN expr_list RPAREN
    (51) block_stmt -> . BEGIN stmt_list END
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET

    END             reduce using rule 27 (stmt_list -> stmt_list SEMICOLON .)
    SEMICOLON       reduce using rule 27 (stmt_list -> stmt_list SEMICOLON .)
    IF              shift and go to state 34
    WHILE           shift and go to state 35
    FOR             shift and go to state 36
    WRITELN         shift and go to state 38
    READLN          shift and go to state 39
    WRITE           shift and go to state 40
    BEGIN           shift and go to state 20
    IDENTIFIER      shift and go to state 37

    stmt                           shift and go to state 83
    assign_stmt                    shift and go to state 24
    if_stmt                        shift and go to state 25
    while_stmt                     shift and go to state 26
    for_stmt                       shift and go to state 27
    writeln_stmt                   shift and go to state 28
    readln_stmt                    shift and go to state 29
    write_stmt                     shift and go to state 30
    block_stmt                     shift and go to state 31
    func_call                      shift and go to state 32
    var_ref                        shift and go to state 33

state 48

    (39) assign_stmt -> var_ref ASSIGN . logic_expr
    (56) logic_expr -> . logic_expr AND rel_expr
    (57) logic_expr -> . logic_expr OR rel_expr
    (58) logic_expr -> . NOT rel_expr
    (59) logic_expr -> . rel_expr
    (60) rel_expr -> . rel_expr EQ expr
    (61) rel_expr -> . rel_expr NE expr
    (62) rel_expr -> . rel_expr LT expr
    (63) rel_expr -> . rel_expr GT expr
    (64) rel_expr -> . rel_expr LE expr
    (65) rel_expr -> . rel_expr GE expr
    (66) rel_expr -> . expr
    (67) expr -> . expr PLUS term
    (68) expr -> . expr MINUS term
    (69) expr -> . term
    (70) term -> . term TIMES factor
    (71) term -> . term DIVIDE factor
    (72) term -> . term MOD factor
    (73) term -> . factor
    (74) factor -> . LENGTH LPAREN expr RPAREN
    (75) factor -> . primary
    (76) primary -> . NUMBER
    (77) primary -> . STRING
    (78) primary -> . BOOLEAN_LITERAL
    (79) primary -> . var_ref
    (80) primary -> . func_call
    (81) primary -> . LPAREN logic_expr RPAREN
    (40) var_ref -> . IDENTIFIER
    (41) var_ref -> . IDENTIFIER LBRACKET logic_expr RBRACKET
    (52) func_call -> . IDENTIFIER LPAREN expr_list RPAREN

    NOT             shift and go to state 51
    LENGTH          shift and go to state 55
    NUMBER          shift and go to state 58
    STRING          shift and go to state 59
    BOOLEAN_LITERAL shift and go to state 60
    LPAREN          shift and go to state 56
    IDENTIFIER      shift and go to state 63

    var_ref                        shift and go to state 61
    logic_expr                     shift and go to state 84
    rel_expr                       shift and go to state 50
    expr                           shift and go to state 52
    term                           shift and go to state 53
    factor                         shift and go to state 54
    primary                        shift and go to state 57
    func_call                      shift and go to state 62

state 49

    (42) if_stmt -> IF logic_expr . THEN stmt
    (43) if_stmt -> IF logic_expr . THEN stmt ELSE stmt
    (56) logic_expr -> logic_expr . AND rel_expr
    (57) logic_expr -> logic_expr . OR rel_expr

    THEN            shift and go to state 85
    AND             shift and go to state 86
    OR              shift and go to state 87


state 50

    (59) logic_expr -> rel_expr .
    (60) rel_expr -> rel_expr . EQ expr
    (61) rel_expr -> rel_expr . NE expr
    (62) rel_expr -> rel_expr . LT expr
    (63) rel_expr -> rel_expr . GT expr
    (64) rel_expr -> rel_expr . LE expr
    (65) rel_expr -> rel_expr . GE expr

    THEN            reduce using rule 59 (logic_expr -> rel_expr .)
    AND             reduce using rule 59 (logic_expr -> rel_expr .)
    OR              reduce using rule 59 (logic_expr -> rel_expr .)
    DO              reduce using rule 59 (logic_expr -> rel_expr .)
    END             reduce using rule 59 (logic_expr -> rel_expr .)
    SEMICOLON       reduce using rule 59 (logic_expr -> rel_expr .)
    ELSE            reduce using rule 59 (logic_expr -> rel_expr .)
    RPAREN          reduce using rule 59 (logic_expr -> rel_expr .)
    COMMA           reduce using rule 59 (logic_expr -> rel_expr .)
    RBRACKET        reduce using rule 59 (logic_expr -> rel_expr .)
    TO              reduce using rule 59 (logic_expr -> rel_expr .)
    DOWNTO          reduce using rule 59 (logic_expr -> rel_expr .)
    EQ              shift and go to state 88
    NE              shift and go to state 89
    LT              shift and go to state 90
    GT              shift and go to state 91
    LE              shift and go to state 92
    GE              shift and go to state 93


state 51

    (58) logic_expr -> NOT . rel_expr
    (60) rel_expr -> . rel_expr EQ expr
    (61) rel_expr -> . rel_expr NE expr
    (62) rel_expr -> . rel_expr LT expr
    (63) rel_expr -> . rel_expr GT expr
    (64) rel_expr -> . rel_expr LE expr
    (65) rel_expr -> . rel_expr GE expr
    (66) rel_expr -> . expr
    (67) expr -> . expr PLUS term
    (68) expr -> . expr MINUS term
    (69) expr -> . term
    (70) term -> . term TIMES factor
    (71) term -> . term DIVIDE factor
    (72) term -> . term MOD factor
    (73) term -> . factor
    (74) factor -> . LENGTH LPAREN expr RPAREN
    (75) factor -> . primary
    (76) primary -> . NUMBER
    (77) primary -> . STRING
    (78) primary -> . BOOLEAN_LITERAL
    (79) primary -> . var_ref
    (80) primary -> . func_call
    (81) primary -> . LPAREN logic_expr RPAREN
